@@ -27,6 +27,7 @@ Engine fixes:
 * Fix unintended key presses being registered when quitting the game via an OS keyboard shortcut.
 * Fix divide-by-zero crash when using the dev HUD with a game that uses orthogonal rendering.
 * Fixed a memory leak in Loot copy constructor.
+* Fixed 'resist_percent' property of engine/combat.txt not working when targets had 100% resistance.
 
 Game updates:
 
